# rust_simple

./: COMMAND_PATH_Of_PROJECT.md  Cargo.toml
benches/: my_benchmark.rs  test_criterion.rs
examples/: simple_math_addition.rs  simple_math_subtraction.rs
src/: lib.rs
