[package]
name = "rust_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bench]]
name = "test_criterion"
harness = false

[[bench]]
name = "my_bench_math_addition"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name="simple_math_addition"
